# telephony_cellular_data

./: BUILD.gn  README.md  README_zh.md  bundle.json  hisysevent.yaml  ohos.build
frameworks/cj/: BUILD.gn
frameworks/cj/src/: tel_cellular_data_ffi.cpp  tel_cellular_data_ffi.h  tel_cellular_data_impl.cpp  tel_cellular_data_impl.h  tel_cellular_data_log.h  tel_cellular_data_mock.cpp  tel_cellular_data_utils.h
frameworks/ets/ani/: BUILD.gn  Cargo.toml
frameworks/ets/ani/ets/: @ohos.telephony.data.ets
frameworks/ets/ani/include/: ani_cellular_data.h
frameworks/ets/ani/src/: bridge.rs  cellulardata.rs  lib.rs  wrapper.rs
frameworks/ets/ani/src/cxx/: ani_cellular_data.cpp
frameworks/js/: BUILD.gn
frameworks/js/napi/include/: napi_cellular_data.h  napi_cellular_data_types.h  show_system_apn_settings.h
frameworks/js/napi/src/: cellular_data_handler.cpp  cellular_data_rdb_helper.cpp  cellular_data_service.cpp  cellular_data_state_machine.cpp  napi_cellular_data.cpp  show_system_apn_settings.cpp
frameworks/native/: BUILD.gn  ICellularDataManager.idl  apn_activate_report_info.cpp  apn_attribute.cpp  cellular_data_client.cpp  cellular_data_service_proxy.cpp  cellular_data_service_proxy.h  data_sim_account_call_back.cpp  data_sim_account_callback.cpp  sim_account_callback_stub.cpp
interfaces/innerkits/: apn_activate_report_info.h  apn_attribute.h  cellular_data_client.h  cellular_data_ipc_interface_code.h  cellular_data_types.h  data_sim_account_call_back.h  i_cellular_data_manager.h  libtel_cellular_data_api.versionscript  sim_account_callback_stub.h
interfaces/kits/js/: @ohos.telephony.data.d.ts
sa_profile/: 4007.json  4007.xml  4007_dynamic.json  BUILD.gn
services/booster_net_wrapper/include/: booster_net_wrapper.h
services/booster_net_wrapper/src/: booster_net_wrapper.cpp
services/data_service_ext_wrapper/include/: data_service_ext_wrapper.h
services/data_service_ext_wrapper/src/: data_service_ext_wrapper.cpp
services/include/: cellular_data_airplane_observer.h  cellular_data_controller.h  cellular_data_dump_helper.h  cellular_data_handler.h  cellular_data_incall_observer.h  cellular_data_power_save_mode_subscriber.h  cellular_data_rdb_observer.h  cellular_data_roaming_observer.h  cellular_data_service.h  cellular_data_service_stub.h  cellular_data_setting_observer.h  data_connection_manager.h  data_connection_monitor.h  data_connection_params.h  data_disconnect_params.h  data_switch_settings.h  runner_pool.h  sim_account_callback_proxy.h  state_notification.h  traffic_management.h
services/include/apn_manager/: apn_holder.h  apn_item.h  apn_manager.h  connection_retry_policy.h
services/include/common/: cellular_data_constant.h  cellular_data_event_code.h
services/include/state_machine/: activating.h  active.h  cellular_data_state_machine.h  default.h  disconnecting.h  inactive.h  incall_data_state_machine.h  state_machine.h
services/include/utils/: cellular_data_dump_helper.h  cellular_data_hisysevent.h  cellular_data_net_agent.h  cellular_data_rdb_helper.h  cellular_data_settings_rdb_helper.h  cellular_data_utils.h  net_manager_call_back.h  net_manager_tactics_call_back.h  network_search_callback.h  network_search_utils.h  ril_adapter_utils.h
services/src/: cellular_data_airplane_observer.cpp  cellular_data_controller.cpp  cellular_data_dump_helper.cpp  cellular_data_handler.cpp  cellular_data_incall_observer.cpp  cellular_data_power_save_mode_subscriber.cpp  cellular_data_rdb_observer.cpp  cellular_data_roaming_observer.cpp  cellular_data_service.cpp  cellular_data_service_stub.cpp  cellular_data_setting_observer.cpp  data_connection_manager.cpp  data_connection_monitor.cpp  data_switch_settings.cpp  runner_pool.cpp  sim_account_callback_proxy.cpp  state_notification.cpp  traffic_management.cpp
services/src/apn_manager/: apn_holder.cpp  apn_item.cpp  apn_manager.cpp  connection_retry_policy.cpp
services/src/state_machine/: activating.cpp  active.cpp  cellular_data_state_machine.cpp  default.cpp  disconnecting.cpp  inactive.cpp  incall_data_state_machine.cpp
services/src/utils/: cellular_data_dump_helper.cpp  cellular_data_hisysevent.cpp  cellular_data_net_agent.cpp  cellular_data_rdb_helper.cpp  cellular_data_settings_rdb_helper.cpp  cellular_data_utils.cpp  net_manager_call_back.cpp  net_manager_tactics_call_back.cpp  network_search_callback.cpp  network_search_utils.cpp  sim_utils.cpp  (+1 more)
test/: BUILD.gn  apn_manager_test.cpp  cellualr_data_branch_test.cpp  cellular_data_client_test.cpp  cellular_data_dump_helper_test.cpp  cellular_data_handler_branch_test.cpp  cellular_data_handler_test.cpp  cellular_data_observer_test.cpp  cellular_data_power_save_mode_subscriber_test.cpp  cellular_data_service_test.cpp  cellular_data_test.cpp  cellular_state_machine_test.cpp  data_access_token.cpp  data_access_token.h  data_switch_settings_test.cpp  net_manager_call_back_test.cpp  sim_account_callback_proxy_test.cpp  traffic_management_test.cpp  zero_branch_test.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/common_fuzzer/: adddatatoken_fuzzer.cpp  adddatatoken_fuzzer.h  incalldatastatemachine_fuzzer.cpp  incalldatastatemachine_fuzzer.h  statemachine_fuzzer.cpp  statemachine_fuzzer.h
test/fuzztest/getcellulardatastate_fuzzer/: BUILD.gn  getcellulardatastate_fuzzer.cpp  getcellulardatastate_fuzzer.h
test/fuzztest/updateactivemachine_fuzzer/: BUILD.gn  updateactivemachine_fuzzer.cpp  updateactivemachine_fuzzer.h
test/fuzztest/updatecellulardata_fuzzer/: BUILD.gn  updatecellulardata_fuzzer.cpp  updatecellulardata_fuzzer.h
test/fuzztest/updatedisconnectmachine_fuzzer/: BUILD.gn  updatedisconnectmachine_fuzzer.cpp  updatedisconnectmachine_fuzzer.h
test/fuzztest/updateinactivemachine_fuzzer/: BUILD.gn  updateinactivemachine_fuzzer.cpp  updateinactivemachine_fuzzer.h
test/fuzztest/updateincalldatamachine_fuzzer/: BUILD.gn  updateincalldatamachine_fuzzer.cpp  updateincalldatamachine_fuzzer.h
test/mock/: mock_core_service.h  mock_net_conn_service.h  mock_network_search.h  mock_sim_manager.h
test/unit_test/: BUILD.gn  cellular_data_code_test.cpp
(+6 files in other folders)
