# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")

SOURCE_DIR = "//base/telephony/cellular_data"

ohos_shared_library("tel_cellular_data") {
  sources = [
    "$SOURCE_DIR/services/src/apn_manager/apn_holder.cpp",
    "$SOURCE_DIR/services/src/apn_manager/apn_item.cpp",
    "$SOURCE_DIR/services/src/apn_manager/apn_manager.cpp",
    "$SOURCE_DIR/services/src/apn_manager/connection_retry_policy.cpp",
    "$SOURCE_DIR/services/src/cellular_data_controller.cpp",
    "$SOURCE_DIR/services/src/cellular_data_handler.cpp",
    "$SOURCE_DIR/services/src/cellular_data_rdb_observer.cpp",
    "$SOURCE_DIR/services/src/cellular_data_roaming_observer.cpp",
    "$SOURCE_DIR/services/src/cellular_data_service.cpp",
    "$SOURCE_DIR/services/src/cellular_data_service_stub.cpp",
    "$SOURCE_DIR/services/src/cellular_data_setting_observer.cpp",
    "$SOURCE_DIR/services/src/data_connection_manager.cpp",
    "$SOURCE_DIR/services/src/data_connection_monitor.cpp",
    "$SOURCE_DIR/services/src/data_switch_settings.cpp",
    "$SOURCE_DIR/services/src/state_machine/activating.cpp",
    "$SOURCE_DIR/services/src/state_machine/active.cpp",
    "$SOURCE_DIR/services/src/state_machine/cellular_data_state_machine.cpp",
    "$SOURCE_DIR/services/src/state_machine/default.cpp",
    "$SOURCE_DIR/services/src/state_machine/disconnecting.cpp",
    "$SOURCE_DIR/services/src/state_machine/inactive.cpp",
    "$SOURCE_DIR/services/src/state_notification.cpp",
    "$SOURCE_DIR/services/src/traffic_management.cpp",
    "$SOURCE_DIR/services/src/utils/cellular_data_dump_helper.cpp",
    "$SOURCE_DIR/services/src/utils/cellular_data_net_agent.cpp",
    "$SOURCE_DIR/services/src/utils/cellular_data_rdb_helper.cpp",
    "$SOURCE_DIR/services/src/utils/cellular_data_settings_rdb_helper.cpp",
    "$SOURCE_DIR/services/src/utils/cellular_data_utils.cpp",
    "$SOURCE_DIR/services/src/utils/net_manager_call_back.cpp",
    "$SOURCE_DIR/services/src/utils/net_manager_tactics_call_back.cpp",
    "$SOURCE_DIR/services/src/utils/network_search_callback.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/services/include",
    "$SOURCE_DIR/services/include/common",
    "$SOURCE_DIR/services/include/external",
    "$SOURCE_DIR/services/include/state_machine",
    "$SOURCE_DIR/services/include/utils",
    "$SOURCE_DIR/services/include/apn_manager",
    "$SOURCE_DIR/interfaces/innerkits",
    "//base/telephony/data_storage/pdp_profile/include",
    "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager/include",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//base/telephony/core_service/utils:libtel_common",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager:dataobs_manager",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_runtime:app_manager",
    "ability_runtime:want",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "ipc:ipc_core",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
    "netmanager_base:net_conn_manager_if",
    "netmanager_base:net_policy_manager_if",
    "netmanager_base:net_stats_manager_if",
    "ril_adapter:hril_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "state_registry:tel_state_registry_notify",
  ]
  defines += [
    "TELEPHONY_LOG_TAG = \"CELLULAR_DATA\"",
    "LOG_DOMAIN = 0xD002B01",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "cellular_data"
  subsystem_name = "telephony"
}
