# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/telephony/core_service/telephony.gni")
import("//build/test.gni")
SOURCE_DIR = "//base/telephony/cellular_data"

ohos_unittest("tel_cellular_data_test") {
  subsystem_name = "telephony"
  part_name = "cellular_data"
  test_module = "tel_cellular_data_test"
  module_out_path = part_name + "/" + test_module

  sources = [
    "$SOURCE_DIR/frameworks/native/cellular_data_service_proxy.cpp",
    "$SOURCE_DIR/test/cellular_data_test.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/services/include",
    "$SOURCE_DIR/interfaces/innerkits",
    "$SOURCE_DIR/frameworks/native",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "cellular_data:tel_cellular_data_api",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "cellular_data"
  subsystem_name = "telephony"
}

group("unittest") {
  testonly = true
  deps = [ ":tel_cellular_data_test" ]
}
