# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
SOURCE_DIR = ".."

ohos_unittest("tel_cellular_data_test") {
  subsystem_name = "telephony"
  part_name = "cellular_data"
  test_module = "tel_cellular_data_test"
  module_out_path = part_name + "/" + test_module

  sources = [
    "$SOURCE_DIR/test/cellular_data_test.cpp",
    "$SOURCE_DIR/test/data_access_token.cpp",
    "$SOURCE_DIR/test/zero_branch_test.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/services/include",
    "$SOURCE_DIR/services/include/common",
    "$SOURCE_DIR/services/include/state_machine",
    "$SOURCE_DIR/services/include/utils",
    "$SOURCE_DIR/services/include/apn_manager",
    "$SOURCE_DIR/services/telephony_ext_wrapper/include",
  ]

  deps = [
    "$SOURCE_DIR:tel_cellular_data",
    "$SOURCE_DIR/frameworks/native:tel_cellular_data_api",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "netmanager_base:net_conn_manager_if",
    "netmanager_base:net_policy_manager_if",
    "netmanager_base:net_stats_manager_if",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CelllularDataTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  part_name = "cellular_data"
  subsystem_name = "telephony"
}

group("unittest") {
  testonly = true
  deps = [ ":tel_cellular_data_test" ]
}
