# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"
ohos_shared_library("data") {
  include_dirs = [
    "//third_party/node/src",
    "include",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/include",
    "$SUBSYSTEM_DIR/core_service/utils/log/include",
    "$SUBSYSTEM_DIR/cellular_data/include/utils",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/cellular_data",
    "$SUBSYSTEM_DIR/cellular_data/frameworks/js/napi/include",
  ]

  sources = [
    "$SUBSYSTEM_DIR/cellular_data/frameworks/js/napi/src/napi_cellular_data.cpp",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi/napi_util.cpp",
  ]

  deps = [ "//foundation/arkui/napi:ace_napi" ]

  external_deps = [
    "c_utils:utils",
    "cellular_data:tel_cellular_data_api",
    "init:libbegetutil",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularDataJsApi\"",
    "LOG_DOMAIN = 0xD001F03",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "cellular_data"
  subsystem_name = "telephony"
  relative_install_dir = "module/telephony"
}
