# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "../../.."
ohos_shared_library("data") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "//third_party/node/src",
    "$SUBSYSTEM_DIR/cellular_data/include/utils",
    "$SUBSYSTEM_DIR/cellular_data/frameworks/js/napi/include",
  ]

  sources = [ "$SUBSYSTEM_DIR/cellular_data/frameworks/js/napi/src/napi_cellular_data.cpp" ]

  deps =
      [ "$SUBSYSTEM_DIR/cellular_data/frameworks/native:tel_cellular_data_api" ]

  external_deps = [
    "c_utils:utils",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "hilog:libhilog",
    "init:libbegetutil",
    "napi:ace_napi",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularDataJsApi\"",
    "LOG_DOMAIN = 0xD001F03",
  ]

  part_name = "cellular_data"
  subsystem_name = "telephony"
  relative_install_dir = "module/telephony"
}
