# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/cellular_data/services"
ohos_executable("tel_cellular_data_ui_test") {
  sources = [ "cellular_data_code_test.cpp" ]

  include_dirs = [
    "//base/telephony/core_service/common/core",
    "//base/telephony/core_service/interfaces/innerkits/network_search",
    "//base/telephony/cellular_data/interfaces/innerkits",
    "//base/telephony/cellular_data/interfaces/kits/native",
    "//base/telephony/core_service/common/network_search",
    "//base/telephony/core_service/interfaces/innerkits/sim",
    "//base/telephony/core_service/interfaces/innerkits/core",
    "//base/telephony/ril_adapter/interfaces/innerkits/include",
    "//base/telephony/core_service/common/sim",
    "$SOURCE_DIR/include/common",
  ]

  deps = [
    "//base/telephony/core_service:tel_core_service",
    "//base/telephony/core_service/utils:libtelephony_common",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "cellular_data:tel_cellular_data_api",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CelllularDataTest\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "cellular_data"
  subsystem_name = "telephony"
}
