# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/telephony/cellular_data/cellular_data_ability_runtime.gni")
import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")

SOURCE_DIR = "//base/telephony/cellular_data"
ohos_executable("tel_cellular_data_ui_test") {
  sources = [ "cellular_data_code_test.cpp" ]

  include_dirs = [
    "$SOURCE_DIR/interfaces/innerkits",
    "$SOURCE_DIR/interfaces/kits/native",
    "$SOURCE_DIR/services/include/common",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [ "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "cellular_data:tel_cellular_data_api",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "init:libbegetutil",
  ]

  defines += [
    "TELEPHONY_LOG_TAG = \"CelllularDataUiTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "cellular_data"
  subsystem_name = "telephony"
}
