# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

SOURCE_DIR = "../.."
ohos_executable("tel_cellular_data_ui_test") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  sources = [ "cellular_data_code_test.cpp" ]

  include_dirs = [
    "$SOURCE_DIR/interfaces/innerkits",
    "$SOURCE_DIR/interfaces/kits/native",
    "$SOURCE_DIR/services/include/common",
  ]

  deps = [ "$SOURCE_DIR/frameworks/native:tel_cellular_data_api" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "netmanager_base:net_conn_manager_if",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CelllularDataUiTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  part_name = "cellular_data"
  subsystem_name = "telephony"
}
